Add first name, last name ,dob to player. Finish invitation. Fix date format.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -48,8 +48,8 @@
             <%= link_to 'Lineups', lineups_path %>
             <div class="line"></div>
           </li>
-          <li>
-            <a href="#">Leaderboard</a>
+          <li class='<%= menu_classes 'leaderboard' %>'>
+            <%= link_to 'Leaderboard', users_leadboard_path%>
             <div class="line"></div>
           </li>
           <li>
