--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -76,7 +76,7 @@
         background: #fff;
         padding: 7px 14px;
         .line {
-          display: inline;
+          display:block;
         }
         a {
           background: none;
