--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
     </div>
 
     <div class='row'>
-      <div class='col-md-4'>
+      <div class='col-md-7'>
         <ul class='company-section'>
           <li class="item-header">Company</li>
           <li>
@@ -37,10 +37,8 @@
             <a href="#">Careers</a>
           </li>
         </ul>
-      </div>
 
-      <div class='col-md-3'>
-        <ul>
+        <ul class="contact-section">
           <li class="item-header">Connect With Us</li>
           <li class="social-links">
             <%= link_to '#_' do %>
@@ -59,7 +57,7 @@
       </div>
 
       <div class='col-md-5'>
-        <ul>
+        <ul class="partners-section">
           <li class="item-header">Partners</li>
           <li class="partner-links">
             <a href="#">
