--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -35,26 +35,29 @@
   background-color: #2E363E;
   height: 50px;
   font-family: $main-font; //'droid_sansregular';
+  background: image-url('nav-bg.png') no-repeat center center;
 
   .line {
     height: 2px;
     width: 15px;
     margin: 0 auto;
-    background-color: #0FEA6C;
-    display: none;
+    background-color: transparent;
+    display: block;
   }
 
   li {
-    background-color: #3f4a55;
+    /*background-color: #3f4a55;*/
   }
 
   li.welcome-box {
     text-align: center;
     min-width: 220px;
+    background-color: #2e363e;
+    float: right;
     a {
       display: inline-block;
     }
-    background-color: #2e363e;
+    
     .first-name {
       color: #0FEA6C;
     }
@@ -74,9 +77,10 @@
     li {
       &.active {
         background: #fff;
-        padding: 7px 14px;
+        padding: 6px 10px;
         .line {
           display:block;
+          background-color: #0fea6c;
         }
         a {
           background: none;
@@ -85,13 +89,17 @@
     }
   }
 
-  ul li {
-    padding: 7px 14px;
+  ul{
+    width: 100%;
+    li {
+      padding: 6px 10px;
 
-    &:last-child {
-      border-right: none;
+      &:last-child {
+        border-right: none;
+      }
     }
-  }
+  } 
+  
 }
 
 .capitalnavbar {
