--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -32,7 +32,7 @@
           <span class='icon-bar'></span>
         </button>
       </div>
-      .<div class='navbar-collapse collapse mainMenu'>
+      <div class='navbar-collapse collapse mainMenu'>
         <ul class='nav navbar-nav'>
           <li class='<%= menu_classes 'home' %>'>
             <%= link_to 'Home', root_path %>
