--- a/app/assets/stylesheets/balance_block.css.scss
+++ b/app/assets/stylesheets/balance_block.css.scss
@@ -6,7 +6,7 @@ header .balanceBlock {
   background-color: #2e363e;
   float: right;
   min-height: 130px;
-  margin: 0;
+  margin: 0 0 20px 0;
   padding: 22px 25px;
   width: 300px;
   strong {
