--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,15 +1,15 @@
 <div class='topbarWraper'>
   <div class='navbar navbar-default navbar-static-top capital_top_nav' role="navigation">
     <div class='container'>
-      <div class='navbar-header'>
+      <!--<div class='navbar-header'>
         <button class='navbar-toggle' data-target=".capitalcollapse" data-toggle="collapse" type="button">
           <span class='sr-only'>Toggle navigation</span>
           <span class='icon-bar'></span>
           <span class='icon-bar'></span>
           <span class='icon-bar'></span>
         </button>
-      </div>
-      <div class='navbar-collapse collapse capitalcollapse'>
+      </div>-->
+      <div class=''>
         <ul class='nav navbar-nav navbar-nav-centered'>
           <li>
             <%= link_to invite_waiting_lists_path, class: 'refer-link' do%>
