--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -58,6 +58,12 @@
       display: inline-block;
       padding-right: 5px;
       color: white !important;
+
+      &.link{
+        padding-right: 0;
+        padding-left: 0;
+        color: #0FEA6C !important;
+      }
     }
     
     .first-name {
