--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,36 @@
-<h2>Sign up</h2>
+<h2>SIGN UP</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
+    <div class="form-group">
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name, :autofocus => true, :class => 'form-control' %>
+    </div>
 
-    <div><%= f.label :first_name %>
-      <br/>
-      <%= f.text_field :first_name, :autofocus => true %></div>
+    <div class="form-group">
+      <%= f.label :last_name %>
+      <%= f.text_field :last_name, :class => 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <%= f.label :email %>
+      <%= f.email_field :email, :class => 'form-control' %>
+    </div>
 
-    <div><%= f.label :last_name %>
-      <br/>
-      <%= f.text_field :last_name %></div>
-    <div><%= f.label :email %>
-      <br/>
-      <%= f.email_field :email %></div>
+    <div class="form-group">
+      <%= f.label :password %>
+      <%= f.password_field :password, :class => 'form-control' %>
+    </div>
 
-    <div><%= f.label :password %>
-      <br/>
-      <%= f.password_field :password %></div>
+    <div class="form-group">
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, :class => 'form-control' %>
+    </div>
 
-    <div><%= f.label :password_confirmation %>
-      <br/>
-      <%= f.password_field :password_confirmation %></div>
-
-    <div><%= f.submit "Sign up" %></div>
+    <div class="form-group">
+        <%= f.submit "Sign up", :class => 'btn btn-default' %>
+        <%= render "devise/shared/links" %>
+    </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
