--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -261,7 +261,7 @@ input[type=checkbox] {
 }
 
 label:before {
-  content: "";
+  /*content: "";
   display: inline-block;
 
   width: 16px;
@@ -272,7 +272,7 @@ label:before {
   left: 0;
   bottom: 1px;
   background-color: #aaa;
-  box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
+  box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);*/
 }
 
 .radio label:before {
