--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -106,7 +106,7 @@
       <div class='col-lg-6'>
         <h4>
           <strong> AVG. REM./PLAYER:</strong>
-          <span id='contest-salary-consumed' class="currency">
+          <span id='avg-rem-salary' class="currency">
             <%= number_to_currency consumed_salary(@lineup), precision: 0 %>
           </span>
         </h4>
