--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1,7 +1,7 @@
 $theme-green: #0eea6c;
 $theme-alternate-green: #12f089; // lighter green
 
-$theme-light-grey1: #929eaa;
+$theme-light-grey1: #e3eaf0;
 $theme-light-grey2: #758493;
 
 $theme-medium-grey1: #505e6c;
