--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -96,7 +96,7 @@
 <div class="filter_row">
   <div class="row">
     <div class="col-md-4">
-      <h4>Completed Contest</h4>
+      <h4 class="line-height34">Completed Contest</h4>
     </div>
     <div class="col-md-8">
       <ul>
@@ -113,12 +113,12 @@
         <li>
           <h4>Show Contest from</h4>
         </li>
-        <div class="styled-select">
+        <li class="styled-select">
           <select>
             <option>ALL</option>
             <option>ALL TIME</option>
           </select>
-        </div>
+        </li>
       </ul>
     </div>
   </div>
