--- a/app/views/lineups/index.html.erb
+++ b/app/views/lineups/index.html.erb
@@ -14,7 +14,9 @@
     <div class="col-md-8">
       <ul class="nav navbar-nav navbar-right capital-navbar-right">
         <li class="dropdown createnewlineups">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="green">Create New Listings »</span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <span class="green line-height34">Create New Listings »</span>
+          </a>
           <ul class="dropdown-menu" style="background:none; border:none; box-shadow:none">
             <li style="box-shadow:none">
               <div class="uparrow"><img src="/assets/arrow-top.png" alt=""></div>
@@ -58,13 +60,13 @@
                     <input type="button" value="Continue" class="continue cancel"/>
                   </div>
 
-                  <!---Line Ups--->
+                  <!---Line Ups-->
                 </div>
               </div>
             </li>
           </ul>
         </li>
-        <li><span class="green"><a href="#">Global Player Swap »</a></span></li>
+        <li><a href="#" class="green global-player line-height34">Global Player Swap »</a></li>
       </ul>
     </div>
   </div>
