--- a/app/assets/stylesheets/bootstrap-override.css.scss
+++ b/app/assets/stylesheets/bootstrap-override.css.scss
@@ -1,22 +1,22 @@
 @font-face {
   font-family: 'Glyphicons Halflings';
   src: font-url('glyphicons-halflings-regular.eot');
-  src: font-url('/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), font-url('glyphicons-halflings-regular.woff') format('woff'), font-url('glyphicons-halflings-regular.ttf') format('truetype'), font-url('glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+  src: font-url('glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), font-url('glyphicons-halflings-regular.woff') format('woff'), font-url('glyphicons-halflings-regular.ttf') format('truetype'), font-url('glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
 
 /*Fantasy Capital Website Style Sheet for Header Footer Capital Content etc*/
 /*External Font for the Site*/
 @font-face {
 	font-family: 'droid_sansregular';
-	src: url('fonts/droidsans-webfont.eot');
-	src: url('fonts/droidsans-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/droidsans-webfont.woff') format('woff'), url('fonts/droidsans-webfont.ttf') format('truetype'), url('fonts/droidsans-webfont.svg#droid_sansregular') format('svg');
+	src: font-url('droidsans-webfont.eot');
+	src: font-url('droidsans-webfont.eot?#iefix') format('embedded-opentype'), font-url('droidsans-webfont.woff') format('woff'), font-url('droidsans-webfont.ttf') format('truetype'), font-url('droidsans-webfont.svg#droid_sansregular') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'droid_sansbold';
-	src: url('fonts/droidsans-bold-webfont.eot');
-	src: url('fonts/droidsans-bold-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/droidsans-bold-webfont.woff') format('woff'), url('fonts/droidsans-bold-webfont.ttf') format('truetype'), url('fonts/droidsans-bold-webfont.svg#droid_sansbold') format('svg');
+	src: font-url('droidsans-bold-webfont.eot');
+	src: font-url('droidsans-bold-webfont.eot?#iefix') format('embedded-opentype'), font-url('droidsans-bold-webfont.woff') format('woff'), font-url('droidsans-bold-webfont.ttf') format('truetype'), font-url('droidsans-bold-webfont.svg#droid_sansbold') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
