Restyling the lineups page

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -154,7 +154,7 @@ table.tab {
   width: 100%;
 
   strong  {
-    color: $theme-medium-grey1;
+    color: #e3eaf0;
   }
 
   strong.home-team {
@@ -260,8 +260,8 @@ table.tab tbody tr {
 }
 
 div.lineups .col-md-4 {
-  padding-right: 7px;
-  padding-left: 7px;
+  /*padding-right: 7px;
+  padding-left: 7px;*/
 }
 
 .submitTeam {
