--- a/app/views/lineups/index.html.erb
+++ b/app/views/lineups/index.html.erb
@@ -75,7 +75,7 @@
 <!--/Filter-->
 <div class="clear">&nbsp;</div>
 
-<div class="row">
+<div class="lineups-content">
   <%= render partial: 'lineup', collection:  @lineups %>
 </div>
 
