--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -38,7 +38,7 @@
             <%= link_to 'Home', root_path %>
             <div class="line"></div>
           </li>
-          <li class='<%= menu_classes 'contests' %>'>
+          <li class='<%= menu_classes 'entries' %>'>
             <%= link_to 'Contests', entries_path %>
             <div class="line"></div>
           </li>
