Working with some changes on the entires page

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -92,6 +92,9 @@
         }
         a {
           background: none;
+          &:hover{
+            background: white;
+          }
         }
       }
 
