--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -39,7 +39,7 @@
             <div class="line"></div>
           </li>
           <li class='<%= menu_classes 'entries' %>'>
-            <%= link_to 'Contests', entries_path %>
+            <%= link_to 'Entries', entries_path %>
             <div class="line"></div>
           </li>
           <li class='<%= menu_classes 'lineups' %>'>
