--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -51,8 +51,10 @@
     <div class="col-md-4">
       <h4>Upcoming Contest</h4>
     </div>
-    <div class="col-md-8"><span class="green"><a href="#">Join More Contest »</a></span><span class="green"><a href="#">View
-      my Lineups »</a></span></div>
+    <div class="col-md-8">
+      <span class="green"><a href="#">Join More Contest »</a></span>
+      <span class="green"><%= link_to 'View my Lineups', lineups_path %></span>
+    </div>
   </div>
 </div>
 
@@ -66,6 +68,7 @@
         <th data-defaultsort="asc" class="srt-entry-fee">ENTRY FEE</th>
         <th data-defaultsort="asc">PRIZE POOL</th>
         <th data-defaultsort="asc">ENTRIES</th>
+        <th data-defaultsort="disabled"></th>
         <th data-defaultsort="disabled"></th>
       </tr>
       </thead>
@@ -82,8 +85,9 @@
             <td><%= number_to_currency contest.prize %></td>
             <td><%= contest.lineups.size %></td>
             <td>
-              <%= link_to "EDIT", edit_contest_lineup_path(contest, contest.lineup_for_user(current_user)), class: 'button' %>
-            </td>
+              <%= link_to "EDIT", edit_contest_lineup_path(contest, contest.lineup_for_user(current_user)), class: 'button' %></td>
+            <td><%= link_to 'VIEW', entry_path(entry), class: 'button' %></td>
+            
           </tr>
       <% end %>
       </tbody>
@@ -150,7 +154,7 @@
             <td><%= number_to_currency contest.prize %></td>
             <td>814</td>
             <td>$0</td>
-            <td><a class="button" href="#">RESULTS</a></td>
+            <td><%= link_to 'RESULTS', entry_path(entry), class: 'button' %></td>
           </tr>
       <% end %>
       </tbody>
