--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'oswald-regular';
-  src: font-url('oswald-regular.eot?#iefix') format('embedded-opentype'), font-url('oswald-regular.woff') format('woff'), font-url('oswald-regular.ttf') format('truetype'), font-url('oswald-regular.svg#oswald_regular') format('svg');
+  src: url('oswald-regular.eot?#iefix') format('embedded-opentype'), url('oswald-regular.woff') format('woff'), url('oswald-regular.ttf') format('truetype'), url('oswald-regular.svg#oswald_regular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
