--- a/app/views/users/leadboard.html.erb
+++ b/app/views/users/leadboard.html.erb
@@ -1,24 +1,24 @@
-<h2>LEADERBOARD</h2>
-<div class="loginSection">
+<h2>LEADERS</h2>
+<div class="leaderboard-filter">
   <div class="row">
     <div class="col-md-12">
-      <div class="radio">
+      <div class="filter-container">
         <ul class="list-inline filtercheckbox">
           <li> Filter by :</li>
           <li>
-            <input id="sport" type="radio" name="radio" value="">
+            <input id="chkSport" type="checkbox" name="chkSport" value="">
             <label for="sport">Sports</label>
           </li>
           <li>
-            <input id="monthlyleaders" type="radio" name="radio" value="">
+            <input id="chkMonthlyleaders" type="checkbox" name="chkMonthlyleaders" value="">
             <label for="monthlyleaders">Monthly Leaders</label>
           </li>
           <li>
-            <input id="alltimeleaders" type="radio" name="radio" value="">
+            <input id="chkAlltimeleaders" type="checkbox" name="chkAlltimeleaders" value="">
             <label for="alltimeleaders">All-Time Leaders</label>
           </li>
           <li>
-            <input id="topscores" type="radio" name="radio" value="">
+            <input id="chkTopscores" type="checkbox" name="chkTopscores" value="">
             <label for="topscores">Top Scores</label>
           </li>
           <li></li>
@@ -55,4 +55,5 @@
   <% end %>
   </tbody>
 </table>
-<span class="green pull-right">NEXT »</span>
+<div class="next-link green pull-right">NEXT »</div>
+<div class="clearfix"></div>
