sorting of contest

--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -38,12 +38,12 @@
 <table class='contestHead main-grid table sortable filter-result'>
   <thead>
   <tr>
-    <th data-defaultsort="asc" class="srt-contest-name">CONTEST</th>
-    <th data-defaultsort="asc" class="srt-sport">SPORT</th>
-    <th data-defaultsort="asc" class="srt-live-in">LIVE IN</th>
-    <th data-defaultsort="asc" class="srt-entry-fee">ENTRY</th>
-    <th data-defaultsort="asc">PRIZE</th>
-    <th data-defaultsort="asc">ENTRIES</th>
+    <th class="srt-contest-name">CONTEST</th>
+    <th class="srt-sport">SPORT</th>
+    <th class="srt-live-in">LIVE IN</th>
+    <th class="srt-entry-fee">ENTRY</th>
+    <th>PRIZE</th>
+    <th>ENTRIES</th>
     <th data-defaultsort="disabled"></th>
   </tr>
   </thead>
