--- a/app/views/lineups/_lineup.html.erb
+++ b/app/views/lineups/_lineup.html.erb
@@ -1,12 +1,12 @@
 <div class="lineup-wrapper col-md-4">
-  <div class="gridbox <%= lineup.contest.complete? ? "complete" : "upcoming" %>">
+  <div class="gridbox <%= lineup ? "complete" : "upcoming" %>">
     <!---Box Header-->
     <header>
       <div class="pull-left">
-        <%= image_tag "sports/#{lineup.contest.sport.downcase}.png" %>
-        <strong><%= lineup.contest.sport %></strong></div>
+        <%= image_tag "sports/#{lineup.sport.downcase}.png" %>
+        <strong><%= lineup.sport %></strong></div>
       <div class="pull-right">
-        <% if lineup.contest.complete? %>
+        <% if lineup  %>
             <strong>COMPLETE</strong>
         <% else %>
             <strong>UPCOMING</strong>: <%= countdown_tag lineup.contest.start_at %>
@@ -42,19 +42,19 @@
           </tr>
       <% end %>
       <tr>
-        <td colspan="4" style="color: white; text-align: center;"><%= (lineup.contest.complete? ? "<strong>FANTASY POINTS</strong>: 126.7" : "&nbsp;").html_safe %></td>
+        <td colspan="4" style="color: white; text-align: center;"><%= (lineup ? "<strong>FANTASY POINTS</strong>: 126.7" : "&nbsp;").html_safe %></td>
       </tr>
       </tbody>
     </table>
     <p class="last-edit small"><strong>Last Edit:</strong> <%= lineup.updated_at.strftime "%b %d %Y %I:%M %p %Z" %></p>
     <footer>
       <ul>
-        <% unless lineup.contest.complete? %>
-          <li><span class="green"><%= link_to "Edit »", edit_contest_lineup_path(lineup.contest, lineup) %></span></li>
+        <% unless lineup %>
+          <li><span class="green"><%= link_to "Edit »", edit_lineup_path(lineup) %></span></li>
           <li><span class="green"><a href="#">Export »</a></span></li>
         <% end %>
         <li><span class="green"><a href="/entries">Entries »</a></span></li>
-        <% unless lineup.contest.complete? %>
+        <% unless lineup %>
           <li><span class="green"><a href="#">Challenge »</a></span></li>
           <li><span class="green"><%= link_to 'Submit »', lineup_entries_path(lineup), method: :post %></span></li>
         <% end %>
