--- a/app/assets/stylesheets/lineups.css.scss
+++ b/app/assets/stylesheets/lineups.css.scss
@@ -171,6 +171,7 @@ li.dropdown ul {
 .filter_row ul li {
   list-style: none;
   float: left;
+  font-size: 18px;
 }
 
 .filter_row ul li h4 {
@@ -280,6 +281,7 @@ ul.completedcontest li {
   font-size: 18px;
   padding: 2px 10px;
   background: #fff;
+  margin-top: -5px;
 }
 
 .popupTitle {
@@ -509,42 +511,28 @@ table.summarymatchup tbody tr:last-child {
   font-size: 18px;
 }
 
-.number {
-  float: left
-}
-
-h2.number {
-  padding: 15px 0 0 10px;
-  width: 85%;
-  margin: 0 0 15px 0;
-}
-
-strong.number {
-  background: none repeat scroll 0 0 #555555;
-  border-radius: 23px;
-  color: #FFFFFF;
-  font-size: 25px;
-  padding: 0 10px;
-}
-
 .capitalpopover ul {
   width: 100%;
-  margin: 0 auto;
-  clear: both
+  margin: 0 40px;
+  clear: both;
 }
 
 .capitalpopover ul li {
   float: left;
   list-style: none;
-  margin: 20px 0px
+  margin: 20px 5px 20px 0;
 }
 
 .capitalpopover ul li a {
-  color: #0fea6c;
-  background: #555555;
+  color: #fff;
+  background: #505e6c;
   padding: 5px 20px;
   font-weight: bold;
   font-size: 18px;
+
+  &.selected{
+    background: $theme-green;
+  }
 }
 
 .capitalpopover ul li a:hover {
@@ -555,13 +543,13 @@ strong.number {
 
 .buttonlineup {
   float: right;
-  margin: 120px 0 45px
+  margin: 20px 0 45px
 }
 
-.buttonlineup input.cancel {
+.buttonlineup input.button {
   font-family: 'droid_sansbold';
-  color: #0fea6c;
-  background: #555555;
+  color: #fff;
+  background: #505e6c;
   padding: 5px 20px;
   font-weight: bold;
   font-size: 22px;
@@ -594,11 +582,7 @@ strong.number {
   }
 }
 
-.uparrow {
-  position: absolute;
-  top: -21px;
-  z-index: 9
-}
+
 
 .createnewlineups {
   background: none !important;
@@ -607,4 +591,50 @@ strong.number {
 }
 .same-height{
   overflow-y: scroll;
+}
+
+
+/*-----------new lineup popup -----------------*/
+.new-lineup-popup{
+  margin-top: 45px;
+  position: absolute;
+  margin-left: -20px;
+  margin-top: -15px;
+  z-index: 8;
+  display: none;
+  .uparrow {
+    z-index: 9;
+    margin-left: 600px;
+  }
+  .container{
+    border: 2px solid #C2C2C2;
+    left: -487px;
+    margin: -18px 0 0;
+    right: 0;
+    width: 962px;
+
+    .lineup-item{
+      .item-header{
+        .number {
+          float: left
+        }
+
+        h2.number {
+          padding: 15px 0 0 10px;
+          width: 85%;
+          margin: 0 0 15px 0;
+          font-size: 24px;
+        }
+
+        strong.number {
+          background: none repeat scroll 0 0 #505e6c;
+          border-radius: 23px;
+          color: #FFFFFF;
+          font-size: 25px;
+          padding: 0 10px;
+          margin-top: 10px;
+        }
+      }
+    }
+  }
 }
