--- a/app/views/lineups/index.html.erb
+++ b/app/views/lineups/index.html.erb
@@ -2,84 +2,86 @@
   <p>
   <h2>MY LINEUPS</h2>
   <div class="filter_row">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="styled-select_2">
-        <select>
-          <option>FILTER VIEW</option>
-          <option>ALL TIME</option>
-        </select>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="styled-select_2">
+          <select>
+            <option>FILTER VIEW</option>
+            <option>ALL TIME</option>
+          </select>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <ul class="nav navbar-nav navbar-right capital-navbar-right">
+          <li class="dropdown createnewlineups">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <span class="green line-height34">Create New Lineup »</span>
+            </a>
+          </li>
+          <li><a href="#" class="green global-player line-height34">Global Player Swap »</a></li>
+        </ul>
       </div>
     </div>
-    <div class="col-md-8">
-      <ul class="nav navbar-nav navbar-right capital-navbar-right">
-        <li class="dropdown createnewlineups">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <span class="green line-height34">Create New Listings »</span>
-          </a>
-          <ul class="dropdown-menu" style="background:none; border:none; box-shadow:none">
-            <li style="box-shadow:none">
-              <div class="uparrow"><img src="/assets/arrow-top.png" alt=""></div>
-              <div class="container capitalcontent" style="   border: 2px solid #C2C2C2;
-                      left: -487px;
-                      margin: 10px 0 0;
-                      position: absolute;
-                      right: 0;
-                      width: 962px;">
-                <div class="lineups">
-                  <div class="capitalpopover">
-                    <div class="popoverTitle">
-                      <h2>Create New Lineup</h2>
-                      <button type="button" class="btnClose" data-dismiss="modal">X</button>
-                    </div>
-                    <p class="message" style="text-align:left">THERE ARE A FEW THINGS TO KNOW BEFORE YOU CAN BEGIN
-                      BUILDINGG YOUR LINEUP. THE QUESTIONS BELOW HELP US DETERMINE WHICH PLAYERS ARE AVAILABLE FOR
-                      DRAFTING IN THE NEXT STEP.</p>
-                    <strong class="number">1</strong>
 
-                    <h2 class="number">WHAT SPORT DO YOU WANT TO CREATE A LINEUP FOR?</h2>
-                    <ul>
-                      <li><a href="#">NFL</a></li>
-                      <li><a href="#">NBA</a></li>
-                      <li><a href="#">CBB</a></li>
-                      <li><a href="#">NHL</a></li>
-                    </ul>
-                    <div class="clear">&nbsp;</div>
-                    <strong class="number">2</strong>
+    <div class="new-lineup-popup">
+      <div class="uparrow"><img src="/assets/arrow-top.png" alt=""></div>
+      <div class="container capitalcontent">
+        
+        <div class="capitalpopover">
+          <div class="popoverTitle">
+            <h2>CREATE NEW LINEUP</h2>
+            <button type="button" class="btnClose" data-dismiss="modal">X</button>
+          </div>
+          <p class="message" style="text-align:left">THERE ARE A FEW THINGS TO KNOW BEFORE YOU CAN BEGIN
+            BUILDINGG YOUR LINEUP. THE QUESTIONS BELOW HELP US DETERMINE WHICH PLAYERS ARE AVAILABLE FOR
+            DRAFTING IN THE NEXT STEP.</p>
+          <div class="lineup-item">
+            <div class="item-header">
+              <strong class="number">1</strong>
+              <h2 class="number">WHAT SPORT DO YOU WANT TO CREATE A LINEUP FOR?</h2>
+              <div class="clear"></div>
+            </div>
+            <ul class="choices sport-list">
+              <li><a href="javascript:void(0);">NFL</a></li>
+              <li><a href="javascript:void(0);" class="selected">NBA</a></li>
+              <li><a href="javascript:void(0);">CBB</a></li>
+              <li><a href="javascript:void(0);">NHL</a></li>
+            </ul>
 
-                    <h2 class="number">THERE ARE MULTIPLE CONTEST START TIMES CURRRENTLY LISTED FOR THE SPORT YOU’VE
-                      SELECTED. PLEASE SELECT A START TIME.</h2>
-                    <ul>
-                      <li><a href="#">12/10 7:00PM (8 games)</a></li>
-                      <li><a href="#">12/10 7:00PM (9 games)</a></li>
-                      <li><a href="#">12/10 10:00PM (2 games) </a></li>
-                    </ul>
-                  </div>
-                  <div class="buttonlineup">
-                    <input type="button" value="Cancel" class="cancel"/>
-                    <input type="button" value="Continue" class="continue cancel"/>
-                  </div>
+            <div class="clear">&nbsp;</div>
+          </div>
 
-                  <!---Line Ups-->
-                </div>
-              </div>
-            </li>
-          </ul>
-        </li>
-        <li><a href="#" class="green global-player line-height34">Global Player Swap »</a></li>
-      </ul>
+          <div class="lineup-item">
+            <div class="item-header">
+              <strong class="number">2</strong>
+              <h2 class="number">THERE ARE MULTIPLE CONTEST START TIMES CURRRENTLY LISTED FOR THE SPORT YOU’VE
+                SELECTED. PLEASE SELECT A START TIME.</h2>
+              <div class="clear"></div>
+            </div>
+            <ul class="choices time-list">
+              <li><a href="javascript:void(0);">12/10 7:00PM (8 games)</a></li>
+              <li><a href="javascript:void(0);">12/10 7:00PM (9 games)</a></li>
+              <li><a href="javascript:void(0);">12/10 10:00PM (2 games) </a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="buttonlineup">
+          <input type="button" value="CANCEL" class="button cancel"/>
+          <input type="button" value="CONTINUE" class="button continue"/>
+        </div>
+      </div>
+      <div class="clearfix"></div>
     </div>
   </div>
-</div>
 
-<!--/Filter-->
-<div class="clear">&nbsp;</div>
+  <!--/Filter-->
+  <div class="clear">&nbsp;</div>
 
-<div class="lineups-content">
-  <%= render partial: 'lineup', collection:  @lineups %>
-</div>
+  <div class="lineups-content">
+    <%= render partial: 'lineup', collection:  @lineups %>
+  </div>
 
-<div class="col-md-4">
-  <!--<div class="gridbox">&nbsp;</div>-->
-</div>
+  <div class="col-md-4">
+    <!--<div class="gridbox">&nbsp;</div>-->
+  </div>
 </div>
