--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -99,7 +99,7 @@
 
   </div>
 </div>
-<%= form_for [@contest, @lineup] do |f| %>
+<%= form_for @lineup do |f| %>
     <div class='col-md2'>
       <h2>LINEUP</h2>
 
@@ -176,6 +176,7 @@
     </div>
 
     <%= f.hidden_field :sport %>
+    <%= f.hidden_field :contest_id_to_enter %>
     <div class='clear'> &nbsp;</div>
     <div class='submitTeam'>
       <%= f.submit 'SUBMIT TEAM', disable_with: 'Please wait...' %>
